@@ -1,3 +1,6 @@
+2001-11-02  Cristy  <cristy@mystic.es.dupont.com>
+	* Typecast offset to unsigned long in coders/pdf.c.
+
 2001-11-01  Cristy  <cristy@mystic.es.dupont.com>
 	* Convert's -flatten, -average, etc. failed with an assert error.
 
